perubagan dan galeri

--- a/index.html
+++ b/index.html
@@ -29,15 +29,11 @@
 	 -->
 
 	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content="" />
+	<meta property="og:title" content="The Wedding of Syaidi and Pina" />
 	<meta property="og:image" content="" />
-	<meta property="og:url" content="" />
-	<meta property="og:site_name" content="" />
 	<meta property="og:description" content="" />
-	<meta name="twitter:title" content="" />
+	<meta name="twitter:title" content="The Wedding of Syaidi and Pina" />
 	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
 
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet'
 		type='text/css'>
@@ -86,7 +82,8 @@
 			</div>
 		</nav>
 
-		<header id="fh5co-header" class="fh5co-cover position-relative" role="banner" style="background-image:url(images/img_bg_2.jpg);">
+		<header id="fh5co-header" class="fh5co-cover position-relative" role="banner"
+			style="background-image:url(images/DSC00139.JPG);">
 			<div class="overlay"></div>
 			<div class="container" style="position: absolute;bottom: 0;">
 				<div class="row">
@@ -95,8 +92,6 @@
 							<div class="display-tc animate-box" data-animate-effect="fadeIn">
 								<h1>Syaidi &amp; Pina</h1>
 								<h2>The Wedding | 29 April 2023</h2>
-								<!-- <div class="simply-countdown simply-countdown-one"></div>
-								<p><a href="#" class="btn btn-default btn-sm">Save the date</a></p> -->
 							</div>
 						</div>
 					</div>
@@ -109,37 +104,37 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 						<h2>We Found Love</h2>
-						<h3>Dan di antara tanda-tanda (kebesaran)-Nya ialah Dia menciptakan pasangan-pasangan untukmu dari jenismu sendiri, agar kamu cenderung dan merasa tenteram kepadanya, dan Dia menjadikan diantaramu rasa kasih dan sayang.</h3>
+						<h3>Dan di antara tanda-tanda (kebesaran)-Nya ialah Dia menciptakan pasangan-pasangan untukmu
+							dari jenismu sendiri, agar kamu cenderung dan merasa tenteram kepadanya, dan Dia menjadikan
+							diantaramu rasa kasih dan sayang.</h3>
 						<p>QS ar-Run (30):21</p>
 					</div>
 				</div>
 				<div class="couple-wrap animate-box">
 					<div class="couple-half">
 						<div class="groom">
-							<img src="images/groom.jpg" alt="groom" class="img-responsive">
+							<img src="images/DSC00316.JPG" alt="groom" class="img-responsive">
 						</div>
 						<div class="desc-groom">
-							<h3>Joefrey Mahusay</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-								there live the blind texts. Separated they live in Bookmarksgrove</p>
+							<h3>Muhammad Syaidi, S.IP</h3>
+							<p>Putra dari Bp. Noor Rkhmadi, S.E dan Ibu. Siti Rukama, Amd. Keb</p>
 						</div>
 					</div>
 					<p class="heart text-center"><i class="icon-heart2"></i></p>
 					<div class="couple-half">
 						<div class="bride">
-							<img src="images/bride.jpg" alt="groom" class="img-responsive">
+							<img src="images/DSC00241.JPG" alt="groom" class="img-responsive">
 						</div>
 						<div class="desc-bride">
-							<h3>Sheila Mahusay</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-								there live the blind texts. Separated they live in Bookmarksgrove</p>
+							<h3>Pina</h3>
+							<p>Putri dari Bp. Saini dan Ibu. Utih</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 
-		<div id="fh5co-event" class="fh5co-bg" style="background-image:url(images/img_bg_3.jpg);">
+		<div id="fh5co-event" class="fh5co-bg" style="background-image:url(images/DSC00164.JPG);">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
@@ -151,111 +146,30 @@
 				<div class="row">
 					<div class="display-t">
 						<div class="display-tc">
-							<div class="col-md-10 col-md-offset-1">
+							<div class="col-md-10">
 								<div class="col-md-6 col-sm-6 text-center">
 									<div class="event-wrap animate-box">
-										<h3>Main Ceremony</h3>
+										<h3>Resepsi Pernikahan</h3>
 										<div class="event-col">
 											<i class="icon-clock"></i>
-											<span>4:00 PM</span>
-											<span>6:00 PM</span>
+											<span>08:00 WITA</span>
+											<span>Selesai</span>
 										</div>
 										<div class="event-col">
 											<i class="icon-calendar"></i>
-											<span>Monday 28</span>
-											<span>November, 2016</span>
+											<span>Sabtu 29</span>
+											<span>April, 2023</span>
 										</div>
-										<p>Far far away, behind the word mountains, far from the countries Vokalia and
-											Consonantia, there live the blind texts. Separated they live in
-											Bookmarksgrove right at the coast of the Semantics, a large language ocean.
-										</p>
-									</div>
-								</div>
-								<div class="col-md-6 col-sm-6 text-center">
-									<div class="event-wrap animate-box">
-										<h3>Wedding Party</h3>
-										<div class="event-col">
-											<i class="icon-clock"></i>
-											<span>7:00 PM</span>
-											<span>12:00 AM</span>
-										</div>
-										<div class="event-col">
-											<i class="icon-calendar"></i>
-											<span>Monday 28</span>
-											<span>November, 2016</span>
-										</div>
-										<p>Far far away, behind the word mountains, far from the countries Vokalia and
-											Consonantia, there live the blind texts. Separated they live in
-											Bookmarksgrove right at the coast of the Semantics, a large language ocean.
+										<p>
+											Turut Mengundang: <br>
+											Kepala Desa Sungai Tabuk <br>
+											Camat Lampihong <br>
+											Seluruh Keluarga
 										</p>
 									</div>
 								</div>
 							</div>
 						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div id="fh5co-couple-story">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-						<span>We Love Each Other</span>
-						<h2>Our Story</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-							there live the blind texts.</p>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12 col-md-offset-0">
-						<ul class="timeline animate-box">
-							<li class="animate-box">
-								<div class="timeline-badge" style="background-image:url(images/couple-1.jpg);"></div>
-								<div class="timeline-panel">
-									<div class="timeline-heading">
-										<h3 class="timeline-title">First We Meet</h3>
-										<span class="date">December 25, 2015</span>
-									</div>
-									<div class="timeline-body">
-										<p>Far far away, behind the word mountains, far from the countries Vokalia and
-											Consonantia, there live the blind texts. Separated they live in
-											Bookmarksgrove right at the coast of the Semantics, a large language ocean.
-										</p>
-									</div>
-								</div>
-							</li>
-							<li class="timeline-inverted animate-box">
-								<div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
-								<div class="timeline-panel">
-									<div class="timeline-heading">
-										<h3 class="timeline-title">First Date</h3>
-										<span class="date">December 28, 2015</span>
-									</div>
-									<div class="timeline-body">
-										<p>Far far away, behind the word mountains, far from the countries Vokalia and
-											Consonantia, there live the blind texts. Separated they live in
-											Bookmarksgrove right at the coast of the Semantics, a large language ocean.
-										</p>
-									</div>
-								</div>
-							</li>
-							<li class="animate-box">
-								<div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
-								<div class="timeline-panel">
-									<div class="timeline-heading">
-										<h3 class="timeline-title">In A Relationship</h3>
-										<span class="date">January 1, 2016</span>
-									</div>
-									<div class="timeline-body">
-										<p>Far far away, behind the word mountains, far from the countries Vokalia and
-											Consonantia, there live the blind texts. Separated they live in
-											Bookmarksgrove right at the coast of the Semantics, a large language ocean.
-										</p>
-									</div>
-								</div>
-							</li>
-						</ul>
 					</div>
 				</div>
 			</div>
@@ -267,99 +181,46 @@
 					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 						<span>Our Memories</span>
 						<h2>Wedding Gallery</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-							there live the blind texts.</p>
 					</div>
 				</div>
 				<div class="row row-bottom-padded-md">
 					<div class="col-md-12">
 						<ul id="fh5co-gallery-list">
-
 							<li class="one-third animate-box" data-animate-effect="fadeIn"
-								style="background-image: url(images/gallery-1.jpg); ">
-								<a href="images/gallery-1.jpg">
-									<div class="case-studies-summary">
-										<span>14 Photos</span>
-										<h2>Two Glas of Juice</h2>
-									</div>
-								</a>
+								style="background-image: url(images/gallery/DSC00091.JPG); ">
 							</li>
 							<li class="one-third animate-box" data-animate-effect="fadeIn"
-								style="background-image: url(images/gallery-2.jpg); ">
-								<a href="#" class="color-2">
-									<div class="case-studies-summary">
-										<span>30 Photos</span>
-										<h2>Timer starts now!</h2>
-									</div>
-								</a>
-							</li>
-
-
-							<li class="one-third animate-box" data-animate-effect="fadeIn"
-								style="background-image: url(images/gallery-3.jpg); ">
-								<a href="#" class="color-3">
-									<div class="case-studies-summary">
-										<span>90 Photos</span>
-										<h2>Beautiful sunset</h2>
-									</div>
-								</a>
+								style="background-image: url(images/gallery/DSC00220.JPG); ">
 							</li>
 							<li class="one-third animate-box" data-animate-effect="fadeIn"
-								style="background-image: url(images/gallery-4.jpg); ">
-								<a href="#" class="color-4">
-									<div class="case-studies-summary">
-										<span>12 Photos</span>
-										<h2>Company's Conference Room</h2>
-									</div>
-								</a>
-							</li>
-
-							<li class="one-third animate-box" data-animate-effect="fadeIn"
-								style="background-image: url(images/gallery-5.jpg); ">
-								<a href="#" class="color-3">
-									<div class="case-studies-summary">
-										<span>50 Photos</span>
-										<h2>Useful baskets</h2>
-									</div>
-								</a>
+								style="background-image: url(images/gallery/DSC00023.JPG); ">
 							</li>
 							<li class="one-third animate-box" data-animate-effect="fadeIn"
-								style="background-image: url(images/gallery-6.jpg); ">
-								<a href="#" class="color-4">
-									<div class="case-studies-summary">
-										<span>45 Photos</span>
-										<h2>Skater man in the road</h2>
-									</div>
-								</a>
-							</li>
-
-							<li class="one-third animate-box" data-animate-effect="fadeIn"
-								style="background-image: url(images/gallery-7.jpg); ">
-								<a href="#" class="color-4">
-									<div class="case-studies-summary">
-										<span>35 Photos</span>
-										<h2>Two Glas of Juice</h2>
-									</div>
-								</a>
-							</li>
-
-							<li class="one-third animate-box" data-animate-effect="fadeIn"
-								style="background-image: url(images/gallery-8.jpg); ">
-								<a href="#" class="color-5">
-									<div class="case-studies-summary">
-										<span>90 Photos</span>
-										<h2>Timer starts now!</h2>
-									</div>
-								</a>
+								style="background-image: url(images/gallery/DSC00032.JPG); ">
 							</li>
 							<li class="one-third animate-box" data-animate-effect="fadeIn"
-								style="background-image: url(images/gallery-9.jpg); ">
-								<a href="#" class="color-6">
-									<div class="case-studies-summary">
-										<span>56 Photos</span>
-										<h2>Beautiful sunset</h2>
-									</div>
-								</a>
+								style="background-image: url(images/gallery/DSC00037.JPG); ">
+							</li>
+							<li class="one-third animate-box" data-animate-effect="fadeIn"
+								style="background-image: url(images/gallery/DSC00061.JPG); ">
+							</li>
+							<li class="one-third animate-box" data-animate-effect="fadeIn"
+								style="background-image: url(images/gallery/DSC00101.JPG); ">
+							</li>
+							<li class="one-third animate-box" data-animate-effect="fadeIn"
+								style="background-image: url(images/gallery/DSC00101A.JPG); ">
+							</li>
+							<li class="one-third animate-box" data-animate-effect="fadeIn"
+								style="background-image: url(images/gallery/DSC00137.JPG); ">
+							</li>
+							<li class="one-third animate-box" data-animate-effect="fadeIn"
+								style="background-image: url(images/gallery/DSC00146.JPG); ">
+							</li>
+							<li class="one-third animate-box" data-animate-effect="fadeIn"
+								style="background-image: url(images/gallery/DSC00148.JPG); ">
+							</li>
+							<li class="one-third animate-box" data-animate-effect="fadeIn"
+								style="background-image: url(images/gallery/DSC00150.JPG); ">
 							</li>
 						</ul>
 					</div>
@@ -367,64 +228,28 @@
 			</div>
 		</div>
 
-		<div id="fh5co-counter" class="fh5co-bg fh5co-counter" style="background-image:url(images/img_bg_5.jpg);">
+		<div id="fh5co-counter" class="fh5co-bg fh5co-counter" style="background-image:url(images/DSC00060.JPG);">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
+					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
+						<span>Will be held</span>
+						<h2>Countdown Events</h2>
+					</div>
+				</div>
+				<div class="row">
 					<div class="display-t">
 						<div class="display-tc">
-							<div class="col-md-3 col-sm-6 animate-box">
-								<div class="feature-center">
-									<span class="icon">
-										<i class="icon-users"></i>
-									</span>
+							<div class="simply-countdown simply-countdown-one"></div>
+							<p><a href="#" class="btn btn-default btn-sm">Save the date</a></p>
 
-									<span class="counter js-counter" data-from="0" data-to="500" data-speed="5000"
-										data-refresh-interval="50">1</span>
-									<span class="counter-label">Estimated Guest</span>
-
-								</div>
-							</div>
-							<div class="col-md-3 col-sm-6 animate-box">
-								<div class="feature-center">
-									<span class="icon">
-										<i class="icon-user"></i>
-									</span>
-
-									<span class="counter js-counter" data-from="0" data-to="1000" data-speed="5000"
-										data-refresh-interval="50">1</span>
-									<span class="counter-label">We Catter</span>
-								</div>
-							</div>
-							<div class="col-md-3 col-sm-6 animate-box">
-								<div class="feature-center">
-									<span class="icon">
-										<i class="icon-calendar"></i>
-									</span>
-									<span class="counter js-counter" data-from="0" data-to="402" data-speed="5000"
-										data-refresh-interval="50">1</span>
-									<span class="counter-label">Events Done</span>
-								</div>
-							</div>
-							<div class="col-md-3 col-sm-6 animate-box">
-								<div class="feature-center">
-									<span class="icon">
-										<i class="icon-clock"></i>
-									</span>
-
-									<span class="counter js-counter" data-from="0" data-to="2345" data-speed="5000"
-										data-refresh-interval="50">1</span>
-									<span class="counter-label">Hours Spent</span>
-
-								</div>
-							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 
-		<div id="fh5co-testimonial">
+		<!-- <div id="fh5co-testimonial">
 			<div class="container">
 				<div class="row">
 					<div class="row animate-box">
@@ -482,20 +307,26 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 		<div id="fh5co-services" class="fh5co-section-gray">
 			<div class="container">
 
 				<div class="row animate-box">
 					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-						<h2>We Offer Services</h2>
-						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem
-							provident. Odit ab aliquam dolor eius.</p>
+						<h2>Lokasi</h2>
 					</div>
 				</div>
 
 				<div class="row">
+				
+					<div class="col-md-6 animate-box">
+						<div class="fh5co-video fh5co-bg">
+							<div class="overlay"></div>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d996.6214619676166!2d115.3714182695562!3d-2.3419336598674065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMsKwMjAnMzEuMCJTIDExNcKwMjInMTkuNCJF!5e0!3m2!1sid!2sid!4v1682321853593!5m2!1sid!2sid"  style="border:0;width: 100%;height: 100%;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+						</div>
+					</div>
+					
 					<div class="col-md-6">
 						<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
 							<span class="icon">
@@ -532,13 +363,7 @@
 
 					</div>
 
-					<div class="col-md-6 animate-box">
-						<div class="fh5co-video fh5co-bg" style="background-image: url(images/img_bg_3.jpg); ">
-							<a href="https://vimeo.com/channels/staffpicks/93951774" class="popup-vimeo"><i
-									class="icon-video2"></i></a>
-							<div class="overlay"></div>
-						</div>
-					</div>
+
 				</div>
 
 
@@ -606,7 +431,7 @@
 	</div>
 
 	<!-- Modal -->
-	<div class="cover open" style="background-image:url(images/img_bg_2.jpg);">
+	<div class="cover open" style="background-image:url(images/DSC00145.JPG);">
 		<div class="container d-table h-100">
 			<div class="text-center d-table-cell align-middle">
 				<div class="animate-box" data-animate-effect="fadeIn">
@@ -647,7 +472,7 @@
 	<script src="js/main.js"></script>
 
 	<script>
-		if($('.cover').hasClass('open')){
+		if ($('.cover').hasClass('open')) {
 			$('body').css('overflow', 'hidden')
 		}
 
