--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>The Wedding of Syaidi and Pina A</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FREEHTML5.CO" />
+	<meta name="description" content="Jl. Lampihong-Guntung, Ds. Sungai Tabuk, Lampihong, Balangan" />
+	<meta name="author" content="SyaidiPutra" />
 
 	<!-- 
 	//////////////////////////////////////////////////////
@@ -30,10 +29,10 @@
 
 	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content="The Wedding of Syaidi and Pina" />
-	<meta property="og:image" content="" />
-	<meta property="og:description" content="" />
+	<meta property="og:image" content="images/gallery/DSC00220.JPG" />
+	<meta property="og:description" content="Jl. Lampihong-Guntung, Ds. Sungai Tabuk, Lampihong, Balangan" />
 	<meta name="twitter:title" content="The Wedding of Syaidi and Pina" />
-	<meta name="twitter:image" content="" />
+	<meta name="twitter:image" content="images/gallery/DSC00220.JPG" />
 
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet'
 		type='text/css'>
@@ -241,7 +240,7 @@
 					<div class="display-t">
 						<div class="display-tc">
 							<div class="simply-countdown simply-countdown-one"></div>
-							<p><a href="#" class="btn btn-default btn-sm">Save the date</a></p>
+							<!-- <p><a href="#" class="btn btn-default btn-sm">Save the date</a></p> -->
 
 						</div>
 					</div>
@@ -348,8 +347,8 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Map</h3>
-								<p><a href="https://goo.gl/maps/uxHarMeh9yzbRN1w7" target="_blank" rel="noopener noreferrer"
-										class="btn btn-primary">Buka Google Maps</a></p>
+								<p><a href="https://goo.gl/maps/uxHarMeh9yzbRN1w7" target="_blank"
+										rel="noopener noreferrer" class="btn btn-primary">Buka Google Maps</a></p>
 							</div>
 						</div>
 
@@ -407,14 +406,6 @@
 									target="_blank">FREEHTML5.co</a> Demo Images: <a href="http://unsplash.co/"
 									target="_blank">Unsplash</a></small>
 						</p>
-						<p>
-						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-						</ul>
-						</p>
 					</div>
 				</div>
 
@@ -428,6 +419,7 @@
 			<div class="text-center d-table-cell align-middle">
 				<div class="animate-box" data-animate-effect="fadeIn">
 					<h1>Syaidi &amp; Pina</h1>
+					<h3 class="text-white" style="text-shadow: -16px 6px 15px #000000;" id="tujuan" ></h3>
 					<p><a href="javascript:buka()" class="btn btn-default btn-sm">Buka Undangan</a></p>
 				</div>
 			</div>
@@ -466,6 +458,11 @@
 	<script src="js/main.js"></script>
 
 	<script>
+
+		let param = (new URL(window.location.href)).searchParams;
+		if (param.get('ke')) {
+			document.getElementById('tujuan').innerHTML = "Untuk " + param.get('ke')
+		}
 
 		// lagu
 		var isPlay = 0
