--- a/index.html
+++ b/index.html
@@ -160,10 +160,7 @@
 											<span>April, 2023</span>
 										</div>
 										<p>
-											Turut Mengundang: <br>
-											Kepala Desa Sungai Tabuk <br>
-											Camat Lampihong <br>
-											Seluruh Keluarga
+											Jl. Lampihong-Guntung RT. 2 Ds. Sungai Tabuk <br> Lampihong-Balaangan
 										</p>
 									</div>
 								</div>
