--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 						</div>
 						<div class="desc-groom">
 							<h3>Muhammad Syaidi, S.IP</h3>
-							<p>Putra dari Bp. Noor Rkhmadi, S.E dan Ibu. Siti Rukama, Amd. Keb</p>
+							<p>Putra dari Bp. Noor Rakhmadi, S.E dan Ibu. Siti Rukama, Amd. Keb</p>
 						</div>
 					</div>
 					<p class="heart text-center"><i class="icon-heart2"></i></p>
